Tue Oct 15 17:47:59 2013  Tanaka Akira  <akr@fsij.org>

	* process.c: Fix a typo.  MacOS X doesn't have ENOTSUPP.

Mon Oct 14 12:32:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options): load statically linked extensions before
	  rubygems, because of ext/thread.

	* ruby.c (process_options): use gem_prelude instead of requiring
	  rubygems directly when --enable=gems is given.

	* Makefile.in (DEFAULT_PRELUDES): always use gem_prelude regardless of
	  --disable-rubygems.

Mon Oct 14 11:07:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_framework): should append framework options to
	  $LIBS, not $LDFLAGS.  The former is propagated to exts.mk when
	  enable-static-linked-ext.

	* lib/mkmf.rb (create_makefile): ranlib on static library, not DLLIB.

Sun Oct 13 23:53:40 2013  Andrew Grimm  <andrew.j.grimm@gmail.com>

	* vsnprintf.c: Fix spelling from compliment to complement.
	  Patch by @agrimm.

	* include/ruby/ruby.h: ditto

Sun Oct 13 20:59:27 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (Init_BareVM): initialize defined_module_hash here,
	  Init_top_self() is too late to register core classes/modules.

	* compile.c (compile_array_): no hash to merge if it is empty.

	* vm.c (m_core_hash_merge_kwd): just check keys if only one argument
	  is given, without merging.

Sat Oct 12 06:35:01 2013-10-11  Eric Hodel  <drbrain@segment7.net>

	* lib/rake:  Update to rake 10.1.0
	* bin/rake:  ditto.
	* test/rake:  ditto.

	* NEWS:  Update NEWS to include rake 10.1.0 and links to release notes.

Sat Oct 12 03:26:04 2013  Koichi Sasada  <ko1@atdot.net>

	* class.c, variable.c, gc.c (rb_class_tbl): removed.

	* vm.c, vm_core.h (rb_vm_add_root_module): added to register as a
	  defined root module or class.
	  This guard helps mark miss from defined classes/modules they are
	  only referred from C's global variables in C-exts.
	  Basically, it is extension's bug.
	  Register to hash object VM has.